--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
     position: fixed;
     top: 30px;
     z-index: 100;
-    height: 60px;
-    width: auto;
+    height: 120px;
+    width: 150px;
     filter: drop-shadow(0 0 5px rgba(255,255,255,0.5));
 }
 .logo-left { left: 40px; }
@@ -79,7 +79,8 @@ body {
     width: 250px;
     height: 250px;
     object-fit: cover;
-    opacity: 0; 
+    margin-top: 90px;
+    /* opacity: 0;  */
     transform: scale(0.8);
     transition: opacity 0.5s ease, transform 0.5s ease, content 0.3s;
 }
