--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     position: fixed;
     top: 30px;
     z-index: 100;
-    height: 100px;
+    height: 80px;
     width: auto;
     filter: drop-shadow(0 0 5px rgba(255,255,255,0.5));
 }
@@ -22,7 +22,6 @@ body {
 #timeline {
     position: relative;
     width: 100%;
-    
 }
 
 .intro-header {
@@ -114,17 +113,15 @@ body {
     z-index: 30;
     transition: top 0.1s; 
     /* Defined size for accurate calculations */
-    width: 250px; 
-    height: 250px;
+    width: 280px; 
+    height: 280px;
 }
 
 #face-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    /* Removed margin-top to allow true centering */
-    margin-top: 25px;
-    /* transform: scale(0.8); */
+    margin-top: 35px;
     transition: opacity 0.5s ease, transform 0.5s ease, content 0.3s;
 }
 
@@ -148,12 +145,12 @@ body {
     padding: 30px 40px;
     backdrop-filter: blur(12px);
     width: 40%;
-    max-width: 535px;
+    max-width: 380px;
     color: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
     position: relative;
     z-index: 20;
-    border: 1px solid #ffffff33; 
+    border: 1px solid #969494; 
     opacity: 0.3;
     transition: opacity 0.5s ease;
 }
@@ -163,12 +160,19 @@ body {
 }
 
 /* --- POSITIONING --- */
-.content.left { margin-right: 55%; margin-left: auto; }
-.content.right { margin-left: 55%; margin-right: auto; }
+.content.left {
+    margin-right: 65%;
+    margin-left: auto;
+}
+
+.content.right {
+    margin-left: 65%;
+    margin-right: auto;
+}
 .content.full-width-bottom { 
     width: 87%; 
-    max-width: 1400px; 
-    margin: 0 auto; 
+    max-width: 1300px; 
+    margin: 0 auto;
     text-align: center; 
     background: rgba(12, 31, 61, 0.85); 
 }
@@ -179,20 +183,21 @@ p { font-size: 1.2rem; line-height: 1.5; }
 .connector-line {
     position: absolute;
     top: 50%;
-    height: 2px;
-    background: #ffffff;
+    height: 3px;
     z-index: 9; 
-    width: 5.5vw; 
+    width: 15vw; 
     transform: scaleX(0); 
     transition: transform 0.6s ease-out; 
+    background: #ffffff55;
+    
 }
 .content.right .connector-line {
-    left: -5vw;
+    left: -15vw;
     transform-origin: left;
 }
 
 .content.left .connector-line {
-    right: -5vw;
+    right: -15vw;
     transform-origin: right;
 }
 
