--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     position: fixed;
     top: 30px;
     z-index: 100;
-    height: 80px;
+    height: 70px;
     width: auto;
     filter: drop-shadow(0 0 5px rgba(255,255,255,0.5));
 }
@@ -29,9 +29,10 @@ body {
     width: 100%; 
     max-width: 1300px;
     margin: 100px auto 0 auto; 
+    margin-top: 150px;
     background: rgba(0, 0, 0, 0.4);
     padding: 40px;
-    border: 2px solid #ffffff55;
+    border: 6px solid #ffffff55;
     color: white;
     text-align: center;
     backdrop-filter: blur(10px);
@@ -103,6 +104,7 @@ body {
     z-index: 0;
     transition: opacity 0.8s ease;
 }
+
 /* --- FACE CONTAINER --- */
 .face-container {
     position: fixed;
@@ -113,15 +115,17 @@ body {
     z-index: 30;
     transition: top 0.1s; 
     /* Defined size for accurate calculations */
-    width: 280px; 
-    height: 280px;
+    width: 310px; 
+    height: 310px;
 }
 
 #face-image {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    margin-top: 35px;
+    /* margin-top: 35px; */
+    margin-top: 120px;
+    transform: scale(1); 
     transition: opacity 0.5s ease, transform 0.5s ease, content 0.3s;
 }
 
@@ -150,7 +154,7 @@ body {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.35);
     position: relative;
     z-index: 20;
-    border: 1px solid #969494; 
+    border: 6px solid #ffffff55; 
     opacity: 0.3;
     transition: opacity 0.5s ease;
 }
@@ -169,6 +173,7 @@ body {
     margin-left: 65%;
     margin-right: auto;
 }
+
 .content.full-width-bottom { 
     width: 87%; 
     max-width: 1300px; 
@@ -183,14 +188,14 @@ p { font-size: 1.2rem; line-height: 1.5; }
 .connector-line {
     position: absolute;
     top: 50%;
-    height: 3px;
+    height: 6px;
     z-index: 9; 
     width: 15vw; 
     transform: scaleX(0); 
     transition: transform 0.6s ease-out; 
     background: #ffffff55;
-    
 }
+
 .content.right .connector-line {
     left: -15vw;
     transform-origin: left;
